--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_STANDARD 23)
 add_executable(WOL_Interface main.cpp
         PacketSender.cpp
         PacketSender.h
+        UI.cpp
+        UI.h
 )
 target_link_libraries(WOL_Interface PRIVATE ws2_32)
